UI: fixes alignment of icon in submenu and moves SVGs into index.html

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -2260,11 +2260,6 @@ button.disabled, i.disabled {
 	cursor: pointer;
 }
 
-.dropdown-menu-container > .row > a {
-	display: block;
-	width: 100%;
-}
-
 .dropdown-menu-container > .row:hover > a {
 	color: var(--solid-black);
 }
@@ -4816,6 +4811,10 @@ table.props td.__value {
 .pt-4 {
 	padding-top: 1rem;
 }
+.px-2 {
+	padding-left: .5rem;
+	padding-right: .5rem;
+}
 .px-3 {
 	padding-left: .75rem;
 	padding-right: .75rem;
@@ -4823,6 +4822,14 @@ table.props td.__value {
 .py-1 {
 	padding-top: .25rem;
 	padding-bottom: .25rem;
+}
+.py-2 {
+	padding-top: .5rem;
+	padding-bottom: .5rem;
+}
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 .truncate {
 	overflow: hidden;
